--- a/src/main/resources/static/ui/partials/menu/state_person.html
+++ b/src/main/resources/static/ui/partials/menu/state_person.html
@@ -10,15 +10,15 @@
                 <li class="mdl-menu__item mdl-list__item mdl-menu__item--full-bleed-divider"
                     ng-click="fetchPersonTableData()">
                     <span class="mdl-list__item-primary-content">
-                        <img class="material-icons mdl-list__item-icon" ng-src="/ui/img/{{iconSet}}/search.{{iconSetType}}" width="24" height="24">
-                        <span>عرض بيانات المستخدمون</span>
+                        <img class="material-icons mdl-list__item-icon" ng-src="/ui/img/{{iconSet}}/refresh.{{iconSetType}}" width="24" height="24">
+                        <span>تحديث البيانات</span>
                     </span>
                 </li>
                 <li class="mdl-menu__item mdl-list__item" ng-click="newPerson()"
                     ng-if="contains(me.team.authorities, ['ROLE_PERSON_CREATE'])">
                     <span class="mdl-list__item-primary-content">
                         <img class="material-icons mdl-list__item-icon" ng-src="/ui/img/{{iconSet}}/add.{{iconSetType}}" width="24" height="24">
-                        <span>مستخدم جديد</span>
+                        <span>جديد</span>
                     </span>
                 </li>
             </ul>
@@ -55,14 +55,14 @@
                     <a href=""
                        ng-click="fetchPersonTableData()"
                        tooltip-append-to-body="true"
-                       uib-tooltip="تحديث البيانات">
-                        <img class="material-icons mdl-list__item-icon" ng-src="/ui/img/{{iconSet}}/search.{{iconSetType}}" width="24" height="24">
+                       uib-tooltip="تحديث">
+                        <img class="material-icons mdl-list__item-icon" ng-src="/ui/img/{{iconSet}}/refresh.{{iconSetType}}" width="24" height="24">
                     </a>
                     <a href=""
                        ng-if="contains(me.team.authorities, ['ROLE_TEAM_CREATE'])"
                        ng-click="newPerson()"
                        tooltip-append-to-body="true"
-                       uib-tooltip="مستخدم جديد">
+                       uib-tooltip="جديد">
                         <img class="material-icons mdl-list__item-icon" ng-src="/ui/img/{{iconSet}}/add.{{iconSetType}}" width="24" height="24">
                     </a>
                 </li>
