--- a/src/main/resources/static/ui/partials/menu/state_master.html
+++ b/src/main/resources/static/ui/partials/menu/state_master.html
@@ -107,7 +107,7 @@
                 <div class="table-responsive">
                     <table class="table table-bordered table-hover">
                         <tbody>
-                        <tr ng-repeat="masterCategory in masterCategories">
+                        <tr ng-repeat="masterCategory in masterCategories" context-menu="rowMenuMasterCategory">
                             <td>
 
                                 <li class="mdl-list__item mdl-list__item--two-line" style="padding: unset;cursor: pointer">
