--- a/src/main/resources/static/ui/partials/person/personCreateUpdate.html
+++ b/src/main/resources/static/ui/partials/person/personCreateUpdate.html
@@ -91,7 +91,7 @@
                                        ng-model="person.contact.birthLocation">
                             </div>
 
-                            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-init="offer.date=now">
+                            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                 <label for="birthDate" class="control-label">تاريخ الميلاد</label>
                                 <div dir="ltr" class="input-group" id="birthDate" ng-init="calendar1='G'">
                                     <span class="input-group-addon">
