--- a/src/main/resources/static/ui/partials/report/offer/offerByMaster.html
+++ b/src/main/resources/static/ui/partials/report/offer/offerByMaster.html
@@ -143,26 +143,6 @@
             </div>
 
             <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <label for="registerOption" class="control-label">حالة الطلاب</label>
-                <select id="registerOption"
-                        style="height: 40px"
-                        required="required"
-                        disable-validation-message=""
-                        class="form-control"
-                        ng-model="buffer.registerOption">
-                    <option value="1">
-                        <span>الكل</span>
-                    </option>
-                    <option value="2">
-                        <span>المسجلين</span>
-                    </option>
-                    <option value="3">
-                        <span>الغير مسجلين</span>
-                    </option>
-                </select>
-            </div>
-
-            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <label for="exportType" class="control-label">نوع الملف المستخرج</label>
                 <select id="exportType"
                         style="height: 40px"
@@ -229,12 +209,12 @@
                             <select class="form-control"
                                     ng-model="sortBy.name">
                                 <option value="code">رقم العرض</option>
-                                <option value="lastUpdate">تاريخ العرض</option>
+                                <option value="writtenDate">تاريخ العرض</option>
                                 <option value="customerName">اسم العميل</option>
                                 <option value="customerIdentityNumber">رقم البطاقة</option>
                                 <option value="customerMobile">رقم الجوال</option>
                                 <option value="master.name">التخصص</option>
-                                <option value="lastPerson.id">مدخل العرض</option>
+                                <option value="person.id">مدخل العرض</option>
                             </select>
                         </td>
                         <td>
