--- a/src/main/resources/static/ui/partials/offer/offerCreateUpdate.html
+++ b/src/main/resources/static/ui/partials/offer/offerCreateUpdate.html
@@ -203,7 +203,8 @@
 
                         <div class="form-group row">
 
-                            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-init="offer.paymentType='Cash'">
+                            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12"
+                                 ng-init="offer.paymentType='Cash'">
                                 <label for="offerType" class="control-label">طريقة الدفع</label>
                                 <select id="offerType"
                                         required="required"
