--- a/src/main/resources/static/ui/partials/offer/offerFilter.html
+++ b/src/main/resources/static/ui/partials/offer/offerFilter.html
@@ -300,12 +300,12 @@
                                                         class="form-control"
                                                         ng-model="sortBy.name">
                                                     <option value="code">رقم العرض</option>
-                                                    <option value="lastUpdate">تاريخ العرض</option>
+                                                    <option value="writtenDate">تاريخ العرض</option>
                                                     <option value="customerName">اسم العميل</option>
                                                     <option value="customerIdentityNumber">رقم البطاقة</option>
                                                     <option value="customerMobile">رقم الجوال</option>
                                                     <option value="master.name">التخصص</option>
-                                                    <option value="lastPerson.id">مدخل العرض</option>
+                                                    <option value="person.id">مدخل العرض</option>
                                                 </select>
                                             </div>
                                         </td>
