--- a/src/main/resources/report/offer/Offer.jrxml
+++ b/src/main/resources/report/offer/Offer.jrxml
@@ -64,68 +64,14 @@
 				</box>
 				<image scaleImage="FillFrame" hAlign="Center" vAlign="Middle" onErrorType="Blank">
 					<reportElement stretchType="RelativeToTallestObject" x="0" y="0" width="595" height="842" uuid="21610afe-ecca-460a-9f93-927dcb83b68f"/>
-					<imageExpression><![CDATA[$P{BACKGROUND}]]></imageExpression>
+					<imageExpression><![CDATA["src/main/resources/report/image/Background.jpg"]]></imageExpression>
 				</image>
 			</frame>
 		</band>
 	</background>
 	<title>
-		<band height="100">
+		<band height="80">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
-			<frame>
-				<reportElement x="32" y="0" width="530" height="100" uuid="f8905662-eeb9-439c-bfd7-ff33632b194b">
-					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
-					<property name="com.jaspersoft.studio.unit.width" value="px"/>
-				</reportElement>
-				<box padding="0">
-					<pen lineWidth="0.25"/>
-					<topPen lineWidth="0.0"/>
-					<leftPen lineWidth="0.0"/>
-					<bottomPen lineWidth="2.25" lineColor="#000000"/>
-					<rightPen lineWidth="0.0"/>
-				</box>
-				<image scaleImage="FillFrame" hAlign="Center" vAlign="Middle" isUsingCache="true" isLazy="true" onErrorType="Blank">
-					<reportElement x="10" y="15" width="80" height="80" uuid="1f7b0a7b-6f88-4bcd-9960-1fb2a99f203e">
-						<property name="com.jaspersoft.studio.unit.height" value="px"/>
-						<property name="com.jaspersoft.studio.unit.width" value="px"/>
-					</reportElement>
-					<imageExpression><![CDATA[$P{LOGO}]]></imageExpression>
-				</image>
-				<frame>
-					<reportElement x="320" y="20" width="210" height="60" uuid="5d10b094-a755-40bf-9367-e63f2ffcd558">
-						<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
-						<property name="com.jaspersoft.studio.unit.height" value="px"/>
-					</reportElement>
-					<textField isBlankWhenNull="true">
-						<reportElement stretchType="RelativeToTallestObject" x="0" y="0" width="210" height="30" uuid="0681f6ce-11d2-4dc5-873f-1a3f401c3068"/>
-						<box padding="0">
-							<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-							<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-							<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-							<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						</box>
-						<textElement textAlignment="Center" verticalAlignment="Middle" rotation="None">
-							<font fontName="PT Bold Heading" size="14" isBold="true" isUnderline="false"/>
-							<paragraph lineSpacing="Single" lineSpacingSize="1.0" spacingBefore="0" spacingAfter="0"/>
-						</textElement>
-						<textFieldExpression><![CDATA[$P{REPORT_TITLE}]]></textFieldExpression>
-					</textField>
-					<textField isBlankWhenNull="true">
-						<reportElement stretchType="RelativeToTallestObject" x="0" y="30" width="210" height="30" uuid="da6f8780-82c2-4d8a-a459-f804c6463c85"/>
-						<box padding="0">
-							<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-							<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-							<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-							<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						</box>
-						<textElement textAlignment="Center" verticalAlignment="Middle" rotation="None">
-							<font fontName="Arial" size="10" isBold="false" isUnderline="false"/>
-							<paragraph lineSpacing="Single" lineSpacingSize="1.0" spacingBefore="0" spacingAfter="0"/>
-						</textElement>
-						<textFieldExpression><![CDATA[$P{REPORT_SUB_TITLE}]]></textFieldExpression>
-					</textField>
-				</frame>
-			</frame>
 		</band>
 	</title>
 	<pageHeader>
@@ -776,40 +722,25 @@
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="102">
-			<property name="com.jaspersoft.studio.unit.height" value="px"/>
+		<band height="54">
 			<frame>
-				<reportElement x="32" y="0" width="530" height="102" uuid="ae51ebf1-76fc-43a6-b538-81267c84b2fc">
+				<reportElement x="20" y="0" width="555" height="54" uuid="be2b9ab0-a223-4f58-ba49-4ab7de3c1438">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 				</reportElement>
 				<box>
 					<pen lineWidth="2.25" lineColor="#000000"/>
-					<leftPen lineWidth="0.0"/>
-					<bottomPen lineWidth="0.0"/>
-					<rightPen lineWidth="0.0"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textField>
-					<reportElement stretchType="RelativeToTallestObject" x="0" y="0" width="530" height="85" forecolor="#000000" uuid="f1c6fa18-0a0f-404f-afa6-d858c5ccbdc2"/>
-					<box topPadding="10" leftPadding="0" bottomPadding="0" rightPadding="0">
-						<pen lineWidth="0.5" lineColor="#0F8628"/>
-						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					</box>
-					<textElement textAlignment="Center" verticalAlignment="Top" rotation="None">
-						<font fontName="Arial" size="10" isBold="true" isUnderline="false"/>
-						<paragraph lineSpacing="Single" lineSpacingSize="1.0" rightIndent="10" spacingBefore="0" spacingAfter="0"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$P{REPORT_FOOTER}]]></textFieldExpression>
-				</textField>
 				<frame>
-					<reportElement x="0" y="85" width="530" height="17" uuid="4392667d-4c0d-40bd-a4f7-6a04f8af30ca">
+					<reportElement x="0" y="0" width="555" height="14" uuid="459f02d6-bfb6-48fe-8b96-fee4c25db74e">
 						<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 					</reportElement>
 					<textField>
-						<reportElement mode="Transparent" x="0" y="0" width="185" height="14" backcolor="#754C29" uuid="b507b508-115e-4467-82a8-11372ea74a81">
+						<reportElement mode="Transparent" x="0" y="0" width="185" height="14" forecolor="#B9CD1C" backcolor="#754C29" uuid="446a00c4-a6c9-4368-a70c-9704464e63d7">
 							<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 						</reportElement>
 						<textElement textAlignment="Left" verticalAlignment="Middle">
@@ -818,9 +749,9 @@
 						<textFieldExpression><![CDATA["Printing Date: " + DateConverter.getHijriStringFromDateLTRWithTime(new java.util.Date())]]></textFieldExpression>
 					</textField>
 					<frame>
-						<reportElement x="219" y="0" width="92" height="14" uuid="99105bf6-46ab-41c7-ae67-1e6e5db83812"/>
+						<reportElement x="231" y="0" width="92" height="14" uuid="9780c3e1-42c7-4283-a5e7-9e2397f12b5f"/>
 						<textField>
-							<reportElement x="0" y="0" width="46" height="14" uuid="5003fec2-14ba-4952-81b5-a706b39a2364">
+							<reportElement x="0" y="0" width="46" height="14" forecolor="#B9CD1C" uuid="0b57e9b8-7fae-4da0-973f-15e87b623aa7">
 								<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
 							</reportElement>
 							<textElement textAlignment="Right" verticalAlignment="Middle">
@@ -829,7 +760,7 @@
 							<textFieldExpression><![CDATA["Page " + $V{PAGE_NUMBER}]]></textFieldExpression>
 						</textField>
 						<textField evaluationTime="Report">
-							<reportElement x="46" y="0" width="46" height="14" uuid="c2ce87e4-fd8c-4815-88db-1c3ffa98c9d2">
+							<reportElement x="46" y="0" width="46" height="14" forecolor="#B9CD1C" uuid="9e1aa2d8-e041-44ba-b397-debdccdb0439">
 								<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 								<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
 							</reportElement>
@@ -840,7 +771,7 @@
 						</textField>
 					</frame>
 					<staticText>
-						<reportElement x="395" y="0" width="135" height="14" uuid="2ea29057-4622-4fb8-add0-61b8f900acd9">
+						<reportElement x="420" y="0" width="135" height="14" forecolor="#B9CD1C" uuid="cc109da4-ea13-42db-aa00-c8174b45fa2f">
 							<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
 						</reportElement>
 						<textElement textAlignment="Center" verticalAlignment="Middle">
