--- a/src/main/resources/report/offer/Report.jrxml
+++ b/src/main/resources/report/offer/Report.jrxml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.4.3.final using JasperReports Library version 6.4.3  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Payment" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" isSummaryWithPageHeaderAndFooter="true" uuid="d667083a-5ee3-46f8-b604-36494df2d410">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Report" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" isSummaryWithPageHeaderAndFooter="true" uuid="d667083a-5ee3-46f8-b604-36494df2d410">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<import value="com.besafx.app.util.DateConverter"/>
 	<style name="BODER_FIELD" mode="Transparent" forecolor="#000000" backcolor="#FFFFFF">
 		<pen lineWidth="0.3"/>
@@ -75,69 +83,33 @@
 	<parameter name="REPORT_SUB_TITLE" class="java.lang.String"/>
 	<parameter name="REPORT_FOOTER" class="java.lang.String"/>
 	<parameter name="LOGO" class="java.lang.String" isForPrompting="false"/>
-	<title>
-		<band height="80">
+	<background>
+		<band height="842">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<frame>
-				<reportElement x="0" y="0" width="555" height="80" uuid="9f220e7a-623a-47a9-86b2-a3b66300f7dc">
-					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
-					<property name="com.jaspersoft.studio.unit.width" value="px"/>
-				</reportElement>
+				<reportElement stretchType="RelativeToTallestObject" x="0" y="0" width="595" height="842" uuid="5376e888-5881-4af9-9129-b95092492477"/>
 				<box padding="0">
-					<pen lineWidth="0.25"/>
-					<topPen lineWidth="0.0"/>
-					<leftPen lineWidth="0.0"/>
-					<bottomPen lineWidth="2.25" lineColor="#000000"/>
-					<rightPen lineWidth="0.0"/>
+					<pen lineColor="#000000"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<image scaleImage="FillFrame" hAlign="Center" vAlign="Middle" isUsingCache="true" isLazy="true" onErrorType="Blank">
-					<reportElement x="10" y="15" width="50" height="50" uuid="72988ee9-8779-4eb8-9cc1-0086823f99c6">
-						<property name="com.jaspersoft.studio.unit.height" value="px"/>
-						<property name="com.jaspersoft.studio.unit.width" value="px"/>
-					</reportElement>
-					<imageExpression><![CDATA[$P{LOGO}]]></imageExpression>
+				<image scaleImage="FillFrame" hAlign="Center" vAlign="Middle" onErrorType="Blank">
+					<reportElement stretchType="RelativeToTallestObject" x="0" y="0" width="595" height="842" uuid="405ad6be-42e3-4fe7-be13-58a39350abf0"/>
+					<imageExpression><![CDATA["src/main/resources/report/image/Background.jpg"]]></imageExpression>
 				</image>
-				<frame>
-					<reportElement x="280" y="20" width="275" height="45" uuid="d97203ff-3d56-44a7-bd8d-188a78b851be">
-						<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
-						<property name="com.jaspersoft.studio.unit.height" value="px"/>
-					</reportElement>
-					<textField isBlankWhenNull="true">
-						<reportElement stretchType="RelativeToTallestObject" x="0" y="0" width="275" height="23" uuid="2e09b352-87fd-40b0-b3bb-d134fb06c9df"/>
-						<box padding="0">
-							<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-							<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-							<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-							<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						</box>
-						<textElement textAlignment="Center" verticalAlignment="Middle" rotation="None">
-							<font fontName="Arial" size="12" isBold="true" isUnderline="false"/>
-							<paragraph lineSpacing="Single" lineSpacingSize="1.0" spacingBefore="0" spacingAfter="0"/>
-						</textElement>
-						<textFieldExpression><![CDATA[$P{REPORT_TITLE}]]></textFieldExpression>
-					</textField>
-					<textField isBlankWhenNull="true">
-						<reportElement stretchType="RelativeToTallestObject" x="0" y="23" width="275" height="22" uuid="f7c94633-cc0c-42cb-94c1-144490da35d6"/>
-						<box padding="0">
-							<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-							<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-							<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-							<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						</box>
-						<textElement textAlignment="Center" verticalAlignment="Middle" rotation="None">
-							<font fontName="Arial" size="10" isBold="false" isUnderline="false"/>
-							<paragraph lineSpacing="Single" lineSpacingSize="1.0" spacingBefore="0" spacingAfter="0"/>
-						</textElement>
-						<textFieldExpression><![CDATA[$P{REPORT_SUB_TITLE}]]></textFieldExpression>
-					</textField>
-				</frame>
 			</frame>
 		</band>
+	</background>
+	<title>
+		<band height="80"/>
 	</title>
 	<pageHeader>
 		<band height="37">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 			<frame>
-				<reportElement x="0" y="6" width="555" height="24" uuid="841d2b01-5399-4e32-a3f4-486544a08e2b"/>
+				<reportElement x="20" y="6" width="555" height="24" uuid="841d2b01-5399-4e32-a3f4-486544a08e2b"/>
 				<textField>
 					<reportElement mode="Transparent" x="0" y="0" width="555" height="24" forecolor="#000000" backcolor="#05991B" uuid="aa70b146-0c3b-4a54-9527-a9b5ce85450f"/>
 					<box>
@@ -157,37 +129,23 @@
 	<pageFooter>
 		<band height="54" splitType="Stretch">
 			<frame>
-				<reportElement x="0" y="0" width="555" height="54" uuid="87ab3ccf-1789-48d6-9ed6-acac887dbebf">
+				<reportElement x="20" y="0" width="555" height="54" uuid="2e876bbd-7b97-4c4f-9875-0e3bd7d4240e">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 				</reportElement>
 				<box>
 					<pen lineWidth="2.25" lineColor="#000000"/>
-					<leftPen lineWidth="0.0"/>
-					<bottomPen lineWidth="0.0"/>
-					<rightPen lineWidth="0.0"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textField>
-					<reportElement stretchType="RelativeToTallestObject" x="0" y="0" width="555" height="40" forecolor="#000000" uuid="6cc265ca-0402-4dae-9b6f-abfef3dc03af"/>
-					<box topPadding="10" leftPadding="0" bottomPadding="0" rightPadding="0">
-						<pen lineWidth="0.5" lineColor="#0F8628"/>
-						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					</box>
-					<textElement textAlignment="Center" verticalAlignment="Top" rotation="None">
-						<font fontName="Arial" size="10" isBold="true" isUnderline="false"/>
-						<paragraph lineSpacing="Single" lineSpacingSize="1.0" rightIndent="10" spacingBefore="0" spacingAfter="0"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$P{REPORT_FOOTER}]]></textFieldExpression>
-				</textField>
 				<frame>
-					<reportElement x="0" y="40" width="555" height="14" uuid="3dba75cb-4fb8-4432-b2b1-8fe6ae763db4">
+					<reportElement x="0" y="0" width="555" height="14" uuid="92f4a6dc-9422-4631-a935-f3529eaf97eb">
 						<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 					</reportElement>
 					<textField>
-						<reportElement mode="Transparent" x="0" y="0" width="185" height="14" backcolor="#754C29" uuid="5734955f-641e-473f-97e1-d74cc6866faf">
+						<reportElement mode="Transparent" x="0" y="0" width="185" height="14" forecolor="#B9CD1C" backcolor="#754C29" uuid="23d337ca-4467-43d9-bd52-58c340c227fb">
 							<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 						</reportElement>
 						<textElement textAlignment="Left" verticalAlignment="Middle">
@@ -196,9 +154,9 @@
 						<textFieldExpression><![CDATA["Printing Date: " + DateConverter.getHijriStringFromDateLTRWithTime(new java.util.Date())]]></textFieldExpression>
 					</textField>
 					<frame>
-						<reportElement x="231" y="0" width="92" height="14" uuid="0e57c4fc-0875-41a5-afc7-83ebc3dc9c2c"/>
+						<reportElement x="231" y="0" width="92" height="14" uuid="c9cc1fdd-17a7-4cad-8da4-2f6a23ccb7b3"/>
 						<textField>
-							<reportElement x="0" y="0" width="46" height="14" uuid="5e388f28-d047-439a-ba03-129d3f7f3843">
+							<reportElement x="0" y="0" width="46" height="14" forecolor="#B9CD1C" uuid="391902e0-0fee-4d0d-a410-6d4be4d24ba7">
 								<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
 							</reportElement>
 							<textElement textAlignment="Right" verticalAlignment="Middle">
@@ -207,7 +165,7 @@
 							<textFieldExpression><![CDATA["Page " + $V{PAGE_NUMBER}]]></textFieldExpression>
 						</textField>
 						<textField evaluationTime="Report">
-							<reportElement x="46" y="0" width="46" height="14" uuid="fc733ab8-98b1-4aec-b417-188bdb3d4f30">
+							<reportElement x="46" y="0" width="46" height="14" forecolor="#B9CD1C" uuid="7555f3b6-9e29-44f2-9517-0cbd22bff2ad">
 								<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 								<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
 							</reportElement>
@@ -218,7 +176,7 @@
 						</textField>
 					</frame>
 					<staticText>
-						<reportElement x="420" y="0" width="135" height="14" uuid="5e0ba691-d072-4cfb-9d97-3a60cabc923b">
+						<reportElement x="420" y="0" width="135" height="14" forecolor="#B9CD1C" uuid="74da624a-0611-4cae-9ba6-bee73edf1764">
 							<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
 						</reportElement>
 						<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -233,7 +191,7 @@
 	<summary>
 		<band height="105">
 			<componentElement>
-				<reportElement x="0" y="0" width="555" height="105" uuid="2cd17ca2-fd9f-4e86-95bc-8d4260dba30a">
+				<reportElement x="20" y="0" width="555" height="105" uuid="2cd17ca2-fd9f-4e86-95bc-8d4260dba30a">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="net.sf.jasperreports.export.headertoolbar.table.name" value=""/>
 					<property name="com.jaspersoft.studio.components.autoresize.next" value="true"/>
