--- a/src/main/resources/static/ui/partials/course/courseFilter.html
+++ b/src/main/resources/static/ui/partials/course/courseFilter.html
@@ -13,27 +13,42 @@
         </h3>
     </div>
 
-    <div class="modal-body" id="modal-body">
+    <div class="modal-body modal-body-free" id="modal-body">
 
-        <div class="row">
+        <div class="form-group row">
 
-            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <label for="branch" class="control-label">الفرع</label>
-                <ui-select id="branch"
-                           focus-autofocus="1"
-                           ng-model="paramCourse.branch"
-                           required="required"
-                           disable-validation-message=""
-                           theme="bootstrap">
-                    <ui-select-match placeholder="اختر الفرع">
-                        {{$select.selected.name}}
-                    </ui-select-match>
-                    <ui-select-choices
-                            repeat="branch in branches | filter: $select.search | orderBy:'code' track by branch.id">
+            <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
 
-                        <div class="mdl-menu__item--full-bleed-divider"></div>
-                        <li class="mdl-list__item mdl-list__item--two-line"
-                            style="padding: unset;cursor: pointer">
+                <div class="mdl-tabs__tab-bar">
+                    <a href="#panel-1-course-filter" class="mdl-tabs__tab col-xs-6 col-sm-6 col-md-6 col-lg-6 is-active">
+                        <span>الفلاتر</span>
+                    </a>
+                    <a href="#panel-2-course-filter" class="mdl-tabs__tab col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                        <span>خيارات</span>
+                    </a>
+                </div>
+
+                <div class="mdl-tabs__panel is-active" id="panel-1-course-filter">
+
+                    <div class="form-group row">
+
+                        <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <label for="branch" class="control-label">الفرع</label>
+                            <ui-select id="branch"
+                                       focus-autofocus="1"
+                                       ng-model="paramCourse.branch"
+                                       required="required"
+                                       disable-validation-message=""
+                                       theme="bootstrap">
+                                <ui-select-match placeholder="اختر الفرع">
+                                    {{$select.selected.name}}
+                                </ui-select-match>
+                                <ui-select-choices
+                                        repeat="branch in branches | filter: $select.search | orderBy:'code' track by branch.id">
+
+                                    <div class="mdl-menu__item--full-bleed-divider"></div>
+                                    <li class="mdl-list__item mdl-list__item--two-line"
+                                        style="padding: unset;cursor: pointer">
                             <span class="mdl-list__item-primary-content">
                             <span class="material-icons mdl-list__item-avatar"
                                   style="background-color: unset;background-image: url('/ui/img/{{iconSet}}/branch.{{iconSetType}}')"></span>
@@ -43,24 +58,24 @@
                                 {{branch.code}}
                             </span>
                             </span>
-                        </li>
+                                    </li>
 
-                    </ui-select-choices>
-                </ui-select>
-            </div>
+                                </ui-select-choices>
+                            </ui-select>
+                        </div>
 
-            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <label for="master" class="control-label">التخصص</label>
-                <ui-select id="master"
-                           ng-model="paramCourse.master"
-                           theme="bootstrap">
-                    <ui-select-match placeholder="اختر التخصص">
-                        [{{$select.selected.code}}] {{$select.selected.name}}
-                    </ui-select-match>
-                    <ui-select-choices repeat="master in paramCourse.branch.masters | filter: $select.search | orderBy:'code' track by master.id">
+                        <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <label for="master" class="control-label">التخصص</label>
+                            <ui-select id="master"
+                                       ng-model="paramCourse.master"
+                                       theme="bootstrap">
+                                <ui-select-match placeholder="اختر التخصص">
+                                    [{{$select.selected.code}}] {{$select.selected.name}}
+                                </ui-select-match>
+                                <ui-select-choices repeat="master in paramCourse.branch.masters | filter: $select.search | orderBy:'code' track by master.id">
 
-                        <div class="mdl-menu__item--full-bleed-divider"></div>
-                        <li class="mdl-list__item mdl-list__item--two-line" style="padding: unset;cursor: pointer">
+                                    <div class="mdl-menu__item--full-bleed-divider"></div>
+                                    <li class="mdl-list__item mdl-list__item--two-line" style="padding: unset;cursor: pointer">
                             <span class="mdl-list__item-primary-content">
                                 <span class="material-icons mdl-list__item-avatar"
                                       style="background-color: unset;background-image: url('/ui/img/{{iconSet}}/master.{{iconSetType}}')"></span>
@@ -70,39 +85,119 @@
                                     {{master.code}}
                                 </span>
                             </span>
-                        </li>
+                                    </li>
 
-                    </ui-select-choices>
-                </ui-select>
-            </div>
+                                </ui-select-choices>
+                            </ui-select>
+                        </div>
 
-            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <label for="codeFrom" class="control-label">رقم الدورة من</label>
-                <input id="codeFrom"
-                       type="number"
-                       min="1"
-                       class="form-control"
-                       placeholder="ادخل رقم الدورة من"
-                       ng-model="paramCourse.codeFrom">
-            </div>
+                        <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <label for="codeFrom" class="control-label">رقم الدورة من</label>
+                            <input id="codeFrom"
+                                   type="number"
+                                   min="1"
+                                   class="form-control"
+                                   placeholder="ادخل رقم الدورة من"
+                                   ng-model="paramCourse.codeFrom">
+                        </div>
 
-            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <label for="codeTo" class="control-label">رقم الدورة إلى</label>
-                <input id="codeTo"
-                       type="number"
-                       min="1"
-                       class="form-control"
-                       placeholder="ادخل رقم الدورة إلى"
-                       ng-model="paramCourse.codeTo">
-            </div>
+                        <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <label for="codeTo" class="control-label">رقم الدورة إلى</label>
+                            <input id="codeTo"
+                                   type="number"
+                                   min="1"
+                                   class="form-control"
+                                   placeholder="ادخل رقم الدورة إلى"
+                                   ng-model="paramCourse.codeTo">
+                        </div>
 
-            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <label for="instructor" class="control-label">اسم المدرب (يحتوى على) </label>
-                <input id="instructor"
-                       type="text"
-                       class="form-control"
-                       placeholder="ادخل اسم المدرب كاملاً او جزءاً منه"
-                       ng-model="paramCourse.instructor">
+                        <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <label for="instructor" class="control-label">اسم المدرب (يحتوى على) </label>
+                            <input id="instructor"
+                                   type="text"
+                                   class="form-control"
+                                   placeholder="ادخل اسم المدرب كاملاً او جزءاً منه"
+                                   ng-model="paramCourse.instructor">
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="mdl-tabs__panel" id="panel-2-course-filter">
+
+                    <div class="form-group row">
+
+                        <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <label for="currentPage" class="control-label">رقم الصفحة </label>
+                            <input id="currentPage"
+                                   type="number"
+                                   min="1"
+                                   class="form-control"
+                                   ng-model="pageCourse.currentPage">
+                        </div>
+
+                        <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <label for="page" class="control-label">عدد الصفوف بالصفحة الواحدة </label>
+                            <input id="page"
+                                   type="number"
+                                   min="1"
+                                   class="form-control"
+                                   ng-model="pageCourse.size">
+                        </div>
+
+                        <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+                            <table class="table table-bordered table-hover">
+                                <thead>
+                                <th class="info" colspan="4">
+                                    <span>ترتيب العروض حسب : </span>
+                                    <a href="" ng-click="addSortBy()">اضافة...</a>
+                                </th>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="sortBy in pageCourse.sorts">
+                                    <td>
+                                        <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                            <label for="sortBy" class="control-label">بواسطة</label>
+                                            <select id="sortBy"
+                                                    class="form-control"
+                                                    ng-model="sortBy.name">
+                                                <option value="code">رقم العرض</option>
+                                                <option value="startDate">تاريخ البداية</option>
+                                                <option value="endDate">تاريخ الانتهاء</option>
+                                                <option value="instructor">المدرب</option>
+                                                <option value="companyName">الجهة التدريبية</option>
+                                                <option value="master.name">التخصص</option>
+                                                <option value="lastPerson.id">مدخل العرض</option>
+                                            </select>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                            <label for="direction" class="control-label">اتجاة الترتيب</label>
+                                            <select id="direction"
+                                                    class="form-control"
+                                                    ng-model="sortBy.direction">
+                                                <option value="asc">تصاعدي</option>
+                                                <option value="desc">تنازلي</option>
+                                            </select>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <a href="" ng-click="pageCourse.sorts.splice($index, 1)">حذف</a>
+                                    </td>
+                                </tr>
+                                </tbody>
+
+                            </table>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
             </div>
 
         </div>
