--- a/src/main/resources/static/ui/partials/menu/state_report.html
+++ b/src/main/resources/static/ui/partials/menu/state_report.html
@@ -36,4 +36,40 @@
         </div>
     </div>
 
+    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 parent text-center"
+         ng-click="ReportModelProvider.openReportAccountByBranchModel()">
+        <div class="card-image mdl-card" style="background-image: url('/ui/img/{{iconSet}}/report-one.{{iconSetType}}')">
+            <div class="mdl-card__title mdl-card--expand"></div>
+        </div>
+        <div class="mdl-card__actions">
+            <a class="card-image__filename">
+                <span>الطلاب المسجلين لكل فرع</span>
+            </a>
+        </div>
+    </div>
+
+    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 parent text-center"
+         ng-click="ReportModelProvider.openReportAccountByMasterModel()">
+        <div class="card-image mdl-card" style="background-image: url('/ui/img/{{iconSet}}/report-one.{{iconSetType}}')">
+            <div class="mdl-card__title mdl-card--expand"></div>
+        </div>
+        <div class="mdl-card__actions">
+            <a class="card-image__filename">
+                <span>الطلاب المسجلين لكل تخصص</span>
+            </a>
+        </div>
+    </div>
+
+    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 parent text-center"
+         ng-click="ReportModelProvider.openReportAccountByCourseModel()">
+        <div class="card-image mdl-card" style="background-image: url('/ui/img/{{iconSet}}/report-one.{{iconSetType}}')">
+            <div class="mdl-card__title mdl-card--expand"></div>
+        </div>
+        <div class="mdl-card__actions">
+            <a class="card-image__filename">
+                <span>الطلاب المسجلين لكل دورة</span>
+            </a>
+        </div>
+    </div>
+
 </div>
