--- a/src/main/resources/static/ui/partials/report/account/accountByBranch.html
+++ b/src/main/resources/static/ui/partials/report/account/accountByBranch.html
@@ -42,8 +42,7 @@
                         </li>
 
                     </ui-select-match>
-                    <ui-select-choices
-                            repeat="branch in branches | filter: $select.search | orderBy:'code' track by branch.id">
+                    <ui-select-choices repeat="branch in branches | filter: $select.search | orderBy:'code' track by branch.id">
 
                         <div class="mdl-menu__item--full-bleed-divider"></div>
                         <li class="mdl-list__item mdl-list__item--two-line"
